src/components/SideBar/SideBar.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');


*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

:root{
    --body-color: #283e4a;
    --sidebar-color: #283e4a;
    --primary-color: #f4f4f9;
    --text-color:#4a90e2;

    --tran-03: all 0.2s ease;
    --tran-03: all 0.3s ease;
    --tran-04: all 0.4s ease;
    --tran-05: all 0.5s ease;

}
/* 
body{
    height: 100vh;
    background: var(--body-color);
} */


.sidebar .text{
    font-size: 16px;
    font-weight: 500;
    color: white;
}

.sidebar .image{
    min-width: 60px;
    display: flex;
    align-items: center;
}


.sidebar{

    top: 0;
    left: 0;
    height: 100%;
    width: 250px;
    padding: 10px 14px;
    background-color: var(--sidebar-color);
    transition: var(--tran-05);
}

.sidebar.close{
    width: 88px;
}

.sidebar.close .text{
    opacity: 0;
}
.sidebar header{
    position: relative;

}

.sidebar .image-text img{
    width: 40px;
    border-radius: 5px;

}

.sidebar header .image-text{
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}


header .image-text .header-text{
    display: flex;
    flex-direction: column;
}

.header-text .name{
    font-weight: 600;
}

.header-text .profession{
    margin-top: -2px;
}

.sidebar header .toggle{
    position: absolute;
    top: 50%;
    right: -25px;
    transform: translateY(-50%);
    height: 25px;
    width: 25px;
    background: var(--primary-color);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    color: var(--sidebar-color);
    font-size: 22px;


}

.sidebar li{

    height: 50px;
    background: var(--sidebar-color);
    margin-top: 10px;
    list-style: none;
    display: flex;
    align-items: center;
    font-size: 22px;
}

.sidebar li .icon{
    font-size: 20px;
    color: #4a90e2;
    min-width: 60px;
    align-items: center;
    justify-content: center;

}

.sidebar li a{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    text-decoration: none;
    transition: var(--tran-04);
    border-radius: 6px;
}

.sidebar li a:hover{
    background: #005fcb;
    color: var(--text-color);
}

.sidebar .menu-bar{
    display: flex;
    height: calc(100% - 75px);
    flex-direction: column;
    justify-content: space-between;
}

